# space-warp

./: .pre-commit-config.yaml  Makefile  README.md  main.spec  pyproject.toml
.trae/documents/: Enable Removing Applications From Saved Snapshots.md  Fix Restore_ Launch Missing Apps & Reposition Windows.md  Show Snapshot Details On Selection.md  Track Restore Progress and Failures.md
assets/: icon.icns
src/space_warp/: __init__.py  __main__.py  config.py  main.py  main_window.py  permissions.py  settings_dialog.py  snapshot_manager.py  system_tray.py  window_manager.py
